调整主页样式

--- a/source/_data/quotation.yml
+++ b/source/_data/quotation.yml
@@ -3,13 +3,13 @@
 # name:     客户名称
 # words:    客户的称赞内容
 #
-- number: 0
-  name: 王勃，唐
-  words: 豫章故郡，洪都新府。星分翼轸，地接衡庐。襟三江而带五湖，控蛮荆而引瓯越。物华天宝，龙光射牛斗之墟；人杰地灵，徐孺下陈蕃之榻。
+# - number: 0
+#   name: 1
+#   words: 1
 
-- number: 1
-  name: 范仲淹，宋
-  words: 庆历四年春，滕子京谪守巴陵郡。越明年，政通人和，百废具兴，乃重修岳阳楼，增其旧制，刻唐贤今人诗赋于其上，属予作文以记之。
+# - number: 1
+#   name: 范仲淹，宋
+#   words: 庆历四年春，滕子京谪守巴陵郡。越明年，政通人和，百废具兴，乃重修岳阳楼，增其旧制，刻唐贤今人诗赋于其上，属予作文以记之。
 
 - number: 2
   name: 王羲之，魏晋
