--- a/themes/acorn/_config.yml
+++ b/themes/acorn/_config.yml
@@ -1,16 +1,16 @@
 # Header
 menu:
   首页: /
-  画廊: /gallery
-  案例: /stories
-  新闻: /archives
+  产品: /gallery
+  解决方案: /stories
+  文章: /archives
   关于: /about
 
 # Content
 excerpt_link: 阅读全文
 
 # Toc
-toc: false
+toc: true
 
 # MIIT ICP/IP/DOMAIN
 beian: 
@@ -21,12 +21,12 @@ beian:
 # Miscellaneous
 favicon: /favicon.ico
 webclip: /images/webclip
-brand:   /images/brand.svg
+brand:   /images/brand.png
 
 # Jumbotron video & Hero image
 ## Jumbotron video
 video: 
-  overlay: true
+  overlay: false
   path: /images/
 ## Hero image
 hero: 
@@ -37,8 +37,8 @@ keen_slider:
 
 # Slogan
 slogan: 
-  primary: 焕然一新
-  secondary: Acorn 是一颗适用于中小企业的 Hexo 主题
+  primary: 
+  secondary: 
   archives: 汇聚热点话题 打造创新思路
   pages: 运维更智能 部署更方便 应用更便捷
   posts: 实践见真知既是最好的解释
